<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/add_call_profile_title"
        style="@style/DialogTitle"
        android:text="@string/add_call_profile_title_text"/>
    
    <EditText 
        android:id="@+id/add_call_name"
        style="@style/DialogItem"
        android:hint="@string/call_name_text"
        android:textColorHint="@color/text_hint"/>
    
    <EditText 
        android:id="@+id/add_call_number"
        style="@style/DialogItem"
        android:hint="@string/call_number_text"
        android:textColorHint="@color/text_hint"/>
    
    <TextView 
        android:id="@+id/time_out_text"
        style="@style/DialogItem"
        android:text="@string/time_out_title_text"/>
    
    <include
        layout="@layout/time_out_picker"/>
    
    <include 
        layout="@layout/bottom_bar_dialog"/>

</LinearLayout>