<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:adx="http://schemas.adflex.vn/apk/lib/ads"
    android:id="@+id/llRoot"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="24dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingRight="18dp"
        android:weightSum="100.0" >

        <TextView
            android:id="@+id/delete_dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:text="@string/delete_title_text"
            android:textColor="@color/text_color"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/list_selector"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/cancel_text"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/list_selector"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="10dp"
            android:text="@string/ok_text"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>